--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ certifi==2025.1.31
 click==8.1.8
 dnspython==2.7.0
 email_validator==2.2.0
+exceptiongroup==1.2.2
 fastapi==0.115.11
 fastapi-cli==0.0.7
 Flask==3.1.0
@@ -20,6 +21,7 @@ Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+psycopg2-binary==2.9.10
 pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
