--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,8 @@
     "globals": "^15.15.0",
     "init": "^0.1.2",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.12",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
