--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.8.0
+bcrypt==4.3.0
 blinker==1.9.0
 certifi==2025.1.31
 click==8.1.8
@@ -21,10 +22,15 @@ Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mypy-extensions==1.0.0
+packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.7
 psycopg2-binary==2.9.10
 pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
+PyJWT==2.10.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
@@ -34,6 +40,7 @@ shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.38
 starlette==0.46.1
+tomli==2.2.1
 typer==0.15.2
 typing_extensions==4.12.2
 uvicorn==0.34.0
