--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.9",
+    "@tanstack/react-form": "^1.11.1",
     "@tanstack/react-query": "^5.74.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
