--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,7 +54,8 @@
     "tailwindcss": "3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "vite-plugin-pwa": "^1.0.1"
   },
   "pnpm": {
     "ignoredBuiltDependencies": [
