--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-form": "^1.11.1",
     "@tanstack/react-query": "^5.74.11",
     "class-variance-authority": "^0.7.1",
